[package]
name = "tide"
version = "0.11.0"
description = "Serve the web – HTTP server framework"
authors = [
    "Aaron Turon <aturon@mozilla.com>",
    "Yoshua Wuyts <yoshuawuyts@gmail.com>",
    "Wonwoo Choi <chwo9843@gmail.com>",
]
documentation = "https://docs.rs/tide"
keywords = ["tide", "http", "web", "framework", "async"]
categories = [
  "network-programming",
  "asynchronous",
  "web-programming::http-server"
]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/http-rs/tide"

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[features]
default = ["h1-server"]
h1-server = ["async-h1"]
docs = ["unstable"]
unstable = []
# DO NOT USE. Only exists to expose internals so they can be benchmarked.
__internal__bench = []

[dependencies]
async-h1 = { version = "2.0.1", optional = true }
async-sse = "4.0.0"
async-std = { version = "1.6.0", features = ["unstable"] }
femme = "2.0.1"
http-types = "2.2.1"
kv-log-macro = "1.0.4"
serde = "1.0.102"
serde_json = "1.0.41"
route-recognizer = "0.2.0"
logtest = "2.0.0"

[dev-dependencies]
async-std = { version = "1.6.0", features = ["unstable", "attributes"] }
juniper = "0.14.1"
portpicker = "0.1.0"
surf = { version = "2.0.0-alpha.3", default-features = false, features = ["h1-client"] }
serde = { version = "1.0.102", features = ["derive"] }
criterion = "0.3.1"
tempfile = "3.1.0"

[[test]]
name = "nested"
path = "tests/nested.rs"
required-features = ["unstable"]

[[bench]]
name = "router"
harness = false

