[package]
authors = [
  "Tide Developers",
]
description = "Tide web server examples"
documentation = "https://docs.rs/tide"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "examples"
readme = "README.md"
repository = "https://github.com/rustasync/tide"
version = "0.1.0"
publish = false

[dependencies]
tide = { path = "../tide" }
cookie = { version = "0.12", features = ["percent-encode"] }
http = "0.1"
http-service = "0.2.0"
bytes = "0.4.12"
futures-fs = "0.0.5"
futures-util-preview = { version = "0.3.0-alpha.16", features = ["compat"] }
juniper = "0.11.1"
mime = "0.3.13"
mime_guess = "2.0.0-alpha.6"
percent-encoding = "1.0.1"
serde = { version = "1.0.91", features = ["derive"] }

[dependencies.multipart]
default-features = false
features = ["server"]
version = "0.16.1"
