[package]
name = "path_table"
version = "0.0.0"
description = "Path-based routing table"
authors = [
    "Aaron Turon <aturon@mozilla.com>",
    "Yoshua Wuyts <yoshuawuyts@gmail.com>",
]
documentation = "https://docs.rs/path_table"
repository = "https://github.com/rust-net-web/tide"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
