[package]
authors = [
    "Tide Developers",
]
description = "Compression-related middleware for Tide"
documentation = "https://docs.rs/tide-compression"
keywords = ["tide", "web", "async", "middleware", "compression"]
categories = ["network-programming", "compression", "asynchronous"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "tide-compression"
readme = "README.md"
repository = "https://github.com/rustasync/tide"
version = "0.1.0"

[dependencies]
tide = { path = "../", default-features = false }
accept-encoding = "0.2.0-alpha.2"
bytes = "0.4.12"
futures-preview = "0.3.0-alpha.18"
http = "0.1"
http-service = { git = "https://github.com/rustasync/http-service", branch = "tokio-0.2" }

[dependencies.async-compression]
default-features = false
features = ["stream", "gzip", "zlib", "brotli", "zstd"]
version = "0.1.0-alpha.3"

[dev-dependencies]
tide = { path = "../", default-features = false }
tokio = "0.2.0-alpha.2"
http-service-mock = { git = "https://github.com/rustasync/http-service", branch = "tokio-0.2" }
