[package]
authors = [
    "Tide Developers",
]
description = "Compression-related middleware for Tide"
documentation = "https://docs.rs/tide-compression"
keywords = ["tide", "web", "async", "middleware", "compression"]
categories = ["network-programming", "compression", "asynchronous"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "tide-compression"
readme = "README.md"
repository = "https://github.com/rustasync/tide"
version = "0.1.0"

[dependencies]
tide = { path = "../", default-features = false }
accept-encoding = "0.2.0-alpha.2"
bytes = "0.4.12"
futures-preview = "0.3.0-alpha.17"
http = "0.1"
http-service = "0.3.1"

[dependencies.async-compression]
default-features = false
features = ["stream", "gzip", "zlib", "brotli", "zstd"]
version = "0.1.0-alpha.1"

[dev-dependencies]
tide = { path = "../", default-features = false }
http-service-mock = "0.3.1"
