[package]
name = "tide-cookies"
version = "0.2.0"
edition = "2018"
authors = [
  "Tide Developers",
]
description = "Cookie middleware and extensions for Tide"
documentation = "https://docs.rs/tide-cookies"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustasync/tide"

[dependencies]
cookie = { version = "0.12", features = ["percent-encode"] }
futures-preview = "0.3.0-alpha.17"
http = "0.1"
http-service = "0.3.0"
tide-core = { path = "../tide-core", default-features = false  }

[dev-dependencies]
tide = { path = "../", default-features = false }
http-service-mock = "0.3.0"
