[package]
name = "tide-core"
version = "0.2.0"
edition = "2018"
authors = [
  "Tide Developers",
]
description = "Core types and traits for Tide web framework"
documentation = "https://docs.rs/tide-core"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustasync/tide"

[dependencies]
futures-preview = "0.3.0-alpha.17"
http = "0.1"
http-service = "0.3.0"
serde = "1.0.91"
serde_json = "1.0.39"
route-recognizer = "0.1.12"

[dev-dependencies]
tide = { path = "../", default-features = false }
serde_derive = "1.0.91"
