[package]
name = "tide-cors"
version = "0.2.0"
authors = [
  "Tide Developers",
]
description = "Cors middleware and extensions for Tide"
documentation = "https://docs.rs/tide-cors"
readme = "README.md"
repository = "https://github.com/rustasync/tide"
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = "0.3.0-alpha.18"
http = "0.1"
http-service = { git = "https://github.com/rustasync/http-service", branch = "tokio-0.2" }
tide-core = { path = "../tide-core" }

[dev-dependencies]
tide = { path = "../" }
http-service-mock = { git = "https://github.com/rustasync/http-service", branch = "tokio-0.2" }
