[package]
authors = [
    "Tide Developers"
]
description = "Form helpers and extensions for Tide"
documentation = "https://docs.rs/tide-forms"
keywords = ["tide", "web", "async", "helpers", "forms"]
categories = [
  "network-programming",
  "web-programming::http-server",
]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "tide-forms"
readme = "README.md"
repository = "https://github.com/rustasync/tide"
version = "0.1.0"

[dependencies]
tide-core = { path = "../tide-core", default-features = false  }
http-service = "0.3.1"
futures-preview = "0.3.0-alpha.17"
http = "0.1"
log = "0.4.6"
multipart = { version = "0.16.1", features = ["server"], default-features = false }
serde = { version = "1.0.91", features = ["derive"] }
serde_urlencoded = "0.6.0"

[dev-dependencies]
tide = { path = "../", default-features = false }

