[package]
authors = [
    "Tide Developers"
]
description = "Logging middleware for Tide"
documentation = "https://docs.rs/tide-log"
keywords = ["tide", "web", "async", "middleware", "logging"]
categories = [
  "logging",
  "network-programming",
  "web-programming::http-server",
]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "tide-log"
readme = "README.md"
repository = "https://github.com/rustasync/tide"
version = "0.1.0"

[dependencies]
tide-core = { path = "../tide-core" }
futures-preview = "0.3.0-alpha.16"
http = "0.1"
log = "0.4.6"

[dev-dependencies]
tide = { path = "../" }
