[package]
name = "tide-panic"
version = "0.1.0"
edition = "2018"
authors = ["Tide Developers"]
description = "Advanced panic support for Tide"
documentation = "https://docs.rs/tide-panic"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustasync/tide"

[dependencies]
futures-preview = "0.3.0-alpha.17"
http = "0.1"
http-service = "0.3.1"
tide-core = { path = "../tide-core" }
