[package]
authors = [
    "Tide Developers"
]
description = "Routing for Tide"
documentation = "https://docs.rs/tide-router"
keywords = ["tide", "web", "async", "router"]
categories = [
  "router",
  "network-programming",
  "web-programming::http-server",
]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "tide-router"
readme = "README.md"
repository = "https://github.com/rustasync/tide"
version = "0.1.0"

[dependencies]
tide-core = { path = "../tide-core" }
futures-preview = "0.3.0-alpha.16"
http = "0.1"
http-service = "0.2.0"
log = "0.4.6"
fnv = "1.0.6"
route-recognizer = "0.1.12"

[dev-dependencies]
tide = { path = "../" }
