[package]
authors = ["Tide Developers"]
description = "Logging middleware for Tide based on slog"
documentation = "https://docs.rs/tide-slog"
keywords = ["tide", "web", "middleware", "logging", "slog"]
categories = [
  "logging",
  "network-programming",
  "web-programming::http-server",
]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "tide-slog"
readme = "README.md"
repository = "https://github.com/rustasync/tide"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs"]

[features]
scope = ["slog-scope", "slog-scope-futures"]

[dependencies]
tide-core = { path = "../tide-core", default-features = false  }
futures-preview = "0.3.0-alpha.17"
http = "0.1"
slog = "2.4.1"
slog-scope = { version = "4.1.1", optional = true }
slog-scope-futures = { version = "0.1.1", optional = true }

[dev-dependencies]
tide = { path = "../", default-features = false }
uuid = { version = "0.7.4", default-features = false, features = ["v4"] }
slog-stdlog = "4.0"
slog-scope = "4.1.1"
